--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,24 +4,54 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v4
+    
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+        
     - name: Install dependencies
       run: npm ci
+      
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+      
     - name: Run Playwright tests
       run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+      continue-on-error: true
+      
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
+      if: always()
       with:
         name: playwright-report
         path: playwright-report/
+        retention-days: 30
+        
+    - name: Install Allure CLI (for reporting only)
+      if: always()
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y openjdk-11-jdk
+        npm install -g allure-commandline
+        
+    - name: Generate Allure Report
+      if: always()
+      run: |
+        npx playwright test --reporter=allure-playwright
+        allure generate allure-results --clean --output allure-report
+        
+    - name: Upload Allure Report
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: allure-report
+        path: allure-report/
         retention-days: 30
